--- a/public/css/other.css
+++ b/public/css/other.css
@@ -199,3 +199,49 @@
   .font {
     color: black;
   }
+
+  body{
+    background-image: url(../images/dot-grid.png);
+    background-repeat: repeat-y repeat-x;
+    background-attachment: fixed;
+  }
+  
+  #content{
+    padding-top: 1.5em;
+    padding-bottom: 4em;
+    background-color: white;
+  }
+  
+  /* Color Boards */
+  .grid-container{
+    display: grid;
+    grid-template-columns: repeat(13, 2em);
+  }
+  #gridContainerLabel{
+    display: grid;
+    grid-template-columns: repeat(13, 2em);
+  }
+  .grid-label{
+    grid-column: span 3;
+    margin-right: 2px;
+    margin-top: 2px;
+    text-align: left;
+    margin-bottom: 0.3em;
+  }
+  .grid-item{
+    margin-right: 2px;
+    margin-top: 2px;
+    border: 1px solid rgb(100, 100, 100, 0);
+    text-align: center;
+    border-radius: 10%;
+    cursor: pointer;
+  }
+  .grid-item-today{
+    margin-right: 2px;
+    margin-top: 2px;
+    border: 1px solid orange;
+    text-align: center;
+    border-radius: 10%;
+    cursor: pointer;
+  }
+  
